working on css again, will fix truncation of categories

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -41,7 +41,7 @@ body {
 .manga-click-div {
   text-decoration: none;
   width: 24%;
-  height: 80%;
+  height: 50%;
   color: darkslategrey;
 }
 .full-manga-section {
@@ -54,12 +54,13 @@ body {
   align-items: flex-start;
   padding-top: 10px;
   padding-left: 10px;
-  gap: 10px;
+  gap: 5px;
 }
 .manga-card {
   width: 100%;
   height: 100%;
-  border: 1px solid black;
+  border: 1px solid whitesmoke;
+  border-radius: 0.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -67,24 +68,21 @@ body {
 }
 .manga-categories {
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  overflow: hidden;
 }
 .manga-cat-text-wrapper {
   display: flex;
   flex-direction: row;
-  width: 80%;
-  justify-content: flex-start;
-  align-items: center;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+  justify-content: center;
+  width: 100%;
+  padding-left: 10px;
+  padding-right: 10px;
+  gap: 5px;
+  overflow: hidden
 }
 .manga-cat-text {
+  display: block;
   font-weight: 100;
-  padding-right: 5px;
 }
 #manga-cat-spacer {
   padding-right: 10px;
@@ -312,7 +310,7 @@ nav {
   margin-top: 0;
   font-size: 1em;
   width: 100%;
-  -webkit-line-clamp: 4;
+  -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
@@ -324,12 +322,12 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 80%;
-  height: auto;
+  width: 32%;
+  height: 50%;
 }
 
 .card-img {
-  width: 80%;
+  width:  100%;
   height: auto;
 }
 .item-information {
